// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter component renders correctly 1`] = `
<div
  className="filter-container"
  data-focusindex={0}
>
  <FilterSelector
    defaultFilter="equal"
    onChange={[Function]}
  />
  <ForwardRef
    adjustable={true}
    setValue={[Function]}
    value={null}
  />
</div>
`;

exports[`Filter component renders correctly when not adjustable by user 1`] = `
<div
  className="filter-container"
  data-focusindex={0}
>
  <ForwardRef
    adjustable={false}
    setValue={[Function]}
    value={null}
  />
</div>
`;

exports[`Filter component renders correctly with aria labels 1`] = `
<div
  className="filter-container"
  data-focusindex={0}
>
  <FilterSelector
    ariaLabel="my label"
    defaultFilter="equal"
    onChange={[Function]}
  />
  <ForwardRef
    adjustable={true}
    screenReaderInputCaption="my label"
    setValue={[Function]}
    value={null}
  />
</div>
`;
